Styles.css and layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <body>
   <div id="particles-js" class="fullscreen">
     <div class="jumbotron text-center">
-      <img class="particles-photo" src="{{ site.photo_url }}" alt="My Image"/>
+      <img class="particles-photo" src="{{ site.photo_url }}" alt="Ali Abdou"/>
       <h1 class="particles-title">{{ site.title }}</h1>
       <h1 class="particles-subtitle">{{ site.description }}</h1>
       <div class="nowrap">
