--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 
+.site-nav a {
+  margin-left: 1rem;
+  font-weight: bold;
+}
+
+
 body {
   max-width: 60%;
   margin-left: auto;
