--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
 
   <header class="site-header">
     <nav class="site-nav">
-      {% if page.lang == "de" %}
-      <a href="{{ '/en/' | relative_url }}">English</a>
+      {% if page.lang == "en" %}
+      a href="{{ '/de/' | relative_url }}">Deutsch</a>
       {% else %}
-      <a href="{{ '/de/' | relative_url }}">Deutsch</a>
+      <a href="{{ '/en/' | relative_url }}">English</a>
       {% endif %}
     </nav>
   </header>
