Fix DE/EN issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <nav class="site-nav">
       {% if page.lang == "en" %}
-      <a href="{{ '/de/' | relative_url }}">Deutsch</a>
+      <a href="{{ '/' | relative_url }}">Deutsch</a>
       {% else %}
       <a href="{{ '/en/' | relative_url }}">English</a>
       {% endif %}
