--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 <body>
   <header class="site-header">
     <nav class="site-nav">
-      <button class="lang-btn" data-lang="de"><a href="{{ '/' | relative_url }}"><img src="../_includes/flags/de.svg" alt="Deutsch"></a></button>
-      <button class="lang-btn" data-lang="en"><a href="{{ '/en/' | relative_url }}"><img src="../_includes/flags/gb.svg" alt="English"></a></button>
+      <button class="lang-btn" data-lang="de"><a href="{{ '/' | relative_url }}"><img src="../assets/flags/de.svg" alt="Deutsch"></a></button>
+      <button class="lang-btn" data-lang="en"><a href="{{ '/en/' | relative_url }}"><img src="../assets/flags/gb.svg" alt="English"></a></button>
 <!--      {% if page.lang == "en" %}-->
 <!--      <a href="{{ '/' | relative_url }}">Deutsch</a>-->
 <!--      {% else %}-->
